--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
     body.landing-active header,
     body.landing-active main,
     body.landing-active footer,
-    body.landing-active .theme-switcher {
+    body.landing-active .theme-switcher,
+    body.landing-active .scroll-hint {
       opacity: 0;
       pointer-events: none;
       transform: translateY(10px);
@@ -162,7 +163,8 @@
     body:not(.landing-active) header,
     body:not(.landing-active) main,
     body:not(.landing-active) footer,
-    body:not(.landing-active) .theme-switcher {
+    body:not(.landing-active) .theme-switcher,
+    body:not(.landing-active) .scroll-hint {
       opacity: 1;
       pointer-events: auto;
       transform: translateY(0);
@@ -212,6 +214,7 @@
       animation: autoRun 20s linear infinite;
       z-index: 0;
       pointer-events: none;
+      cursor: grab;
     }
 
     @keyframes autoRun {
@@ -234,6 +237,7 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      border-radius: 12px;
     }
 
     /* BOTTOM BAR: NAME LEFT, TEXT RIGHT */
@@ -323,7 +327,6 @@
       box-shadow: 0 7px 16px rgba(15, 23, 42, 0.65);
     }
 
-    /* hide the old black model block */
     .banner .content .model {
       display: none;
     }
@@ -403,7 +406,7 @@
     main {
       position: relative;
       z-index: 1;
-      padding: 2rem 1rem 3rem;
+      padding: 2rem 1rem 6rem; /* extra bottom padding so content isn't hidden behind fixed footer */
       max-width: 1000px;
       margin: 0 auto;
     }
@@ -421,6 +424,12 @@
       max-width: 1100px;
       margin: 0 auto;
       min-height: 520px;
+      transition: transform 0.25s ease, box-shadow 0.25s ease;
+    }
+
+    .hero-card:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 14px 36px rgba(0, 0, 0, 0.18);
     }
 
     @media (min-width: 700px) {
@@ -452,6 +461,14 @@
       border-radius: 12px;
       box-shadow: 0 4px 12px var(--shadow);
       display: block;
+      transition: opacity 0.35s ease, transform 0.35s ease;
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    .image-carousel img.img-transition-out {
+      opacity: 0;
+      transform: translateY(8px);
     }
 
     .carousel-nav {
@@ -524,6 +541,75 @@
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25);
     }
 
+    /* ===== PROJECT LIST ===== */
+    .project-list {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      margin-top: 1rem;
+    }
+
+    .project-card {
+      background: rgba(255, 255, 255, 0.95);
+      padding: 1rem 1.3rem;
+      border-radius: 16px;
+      box-shadow: 0 4px 14px rgba(0, 0, 0, 0.06);
+      border-left: 4px solid var(--accent);
+    }
+
+    body.theme-midnight .project-card {
+      background: #020617;
+      border-left-color: #e5e7eb;
+      box-shadow: 0 8px 22px rgba(0, 0, 0, 0.6);
+    }
+
+    .project-card h3 {
+      margin: 0 0 0.3rem;
+    }
+
+    .project-card p {
+      margin: 0.1rem 0;
+      font-size: 0.93rem;
+    }
+
+    /* ===== TIMELINE ===== */
+    .timeline {
+      margin-top: 1rem;
+      border-left: 2px solid rgba(148, 163, 184, 0.6);
+      padding-left: 1rem;
+    }
+
+    .timeline-item {
+      margin-bottom: 0.75rem;
+      position: relative;
+    }
+
+    .timeline-item::before {
+      content: "";
+      position: absolute;
+      left: -1.13rem;
+      top: 0.4rem;
+      width: 10px;
+      height: 10px;
+      border-radius: 999px;
+      background: var(--accent);
+    }
+
+    .timeline-item h4 {
+      margin: 0;
+      font-size: 0.98rem;
+    }
+
+    .timeline-item span {
+      font-size: 0.8rem;
+      opacity: 0.8;
+    }
+
+    .timeline-item p {
+      margin: 0.3rem 0 0;
+      font-size: 0.9rem;
+    }
+
     /* ===== MODAL ===== */
     .modal {
       display: none;
@@ -569,14 +655,63 @@
       color: var(--accent);
     }
 
-    /* ===== SECTIONS ===== */
+    .btn-secondary {
+      margin-top: 0.8rem;
+      padding: 0.45rem 1rem;
+      border-radius: 999px;
+      border: 1px solid rgba(148, 163, 184, 0.7);
+      background: transparent;
+      font-size: 0.85rem;
+      cursor: pointer;
+    }
+
+    .btn-secondary:hover {
+      background: rgba(148, 163, 184, 0.08);
+    }
+
+    /* ===== SECTIONS + ANIMATIONS ===== */
     .section {
       display: none;
       margin-bottom: 1.5rem;
+      opacity: 0;
+      transform: translateY(8px);
+      transition: opacity 0.4s ease, transform 0.4s ease;
     }
 
     .section.active {
       display: block;
+    }
+
+    .section.showing {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    .section.anim-fade {
+      animation: fadeIn 0.5s ease forwards;
+    }
+
+    .section.anim-slide {
+      animation: slideUp 0.5s ease forwards;
+    }
+
+    .section.anim-zoom {
+      animation: zoomIn 0.5s ease forwards;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to   { opacity: 1; }
+    }
+
+    @keyframes slideUp {
+      from { opacity: 0; transform: translateY(20px); }
+      to   { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes zoomIn {
+      from { opacity: 0; transform: scale(0.97); }
+      to   { opacity: 1; transform: scale(1); }
     }
 
     .hero-placeholder {
@@ -587,16 +722,18 @@
       display: block;
     }
 
-    /* ===== FOOTER ===== */
+    /* ===== FOOTER (NOW FIXED) ===== */
     footer {
-      position: relative;
+      position: fixed;
+      left: 0;
+      bottom: 0;
       width: 100%;
-      padding: 1rem 0 1.5rem;
-      margin-top: 1rem;
+      padding: 0.6rem 0 1rem;
       text-align: center;
       color: #888;
       font-size: 0.9rem;
-      z-index: 1;
+      z-index: 105;
+      pointer-events: none; /* nav has pointer events */
     }
 
     body.theme-midnight footer {
@@ -610,6 +747,7 @@
       border-radius: 999px;
       background: rgba(255, 255, 255, 0.9);
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.07);
+      pointer-events: auto;
     }
 
     body.theme-midnight .footer-nav {
@@ -650,6 +788,41 @@
       color: #fff;
     }
 
+    /* ===== SCROLL HINT ===== */
+    .scroll-hint {
+      position: fixed;
+      left: 50%;
+      transform: translateX(-50%);
+      bottom: 3.7rem; /* just above footer nav */
+      z-index: 110;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 0.1rem;
+      font-size: 0.75rem;
+      color: #e5e7eb;
+      text-shadow: 0 2px 6px rgba(0,0,0,0.7);
+      opacity: 1;
+      transition: opacity 0.25s ease;
+      pointer-events: none;
+    }
+
+    .scroll-hint .chevron {
+      font-size: 1.2rem;
+      animation: bounceDown 1.4s ease-in-out infinite;
+    }
+
+    @keyframes bounceDown {
+      0%, 100% { transform: translateY(0); opacity: 0.9; }
+      50%      { transform: translateY(5px); opacity: 0.6; }
+    }
+
+    body.scrolled .scroll-hint,
+    body.landing-active .scroll-hint {
+      opacity: 0;
+      pointer-events: none;
+    }
+
     /* ===== THEME SWITCHER ===== */
     .theme-switcher {
       position: fixed;
@@ -682,7 +855,7 @@
     }
 
     #theme-toggle:hover {
-      transform: translateY(-1px);
+      transform: translateY(-1px) scale(1.02);
       filter: brightness(0.97);
       box-shadow: 0 10px 24px rgba(0, 0, 0, 0.24);
     }
@@ -760,49 +933,42 @@
       position: relative;
     }
 
-    /* whole bar pinned to the bottom center */
     #landing .banner .content {
       position: absolute !important;
       left: 50% !important;
       transform: translateX(-50%) !important;
-
-      bottom: 6vh !important;   /* distance from bottom */
-      top: auto !important;     /* make sure it cannot stick to top */
-
+      bottom: 6vh !important;
+      top: auto !important;
       width: min(1400px, 100vw);
       padding: 0 5vw;
-
       display: flex;
       flex-wrap: nowrap;
-      justify-content: space-between;  /* name left, author right */
+      justify-content: space-between;
       align-items: flex-end;
       z-index: 10;
     }
 
-    /* Name block = left side */
     #landing .banner .content h1 {
       margin: 0;
       text-align: left;
     }
 
-    /* Welcome + button = right side */
     #landing .banner .content .author {
       margin-left: auto;
       text-align: right;
     }
 
-    /* ===== DARK THEME: MAKE LANDING TEXT BRIGHT ===== */
     body.theme-midnight #landing .banner .content h1 {
-      color: #f9fafb;              /* white title */
+      color: #f9fafb;
     }
 
     body.theme-midnight #landing .banner .content h1::after {
-      -webkit-text-stroke: 2px #4b5563;  /* softer gray outline */
+      -webkit-text-stroke: 2px #4b5563;
       color: transparent;
     }
 
     body.theme-midnight #landing .banner .content .author {
-      color: #e5e7eb;              /* light gray for subtitle + body text */
+      color: #e5e7eb;
     }
 
     /* ===== RETURN BUTTON ===== */
@@ -811,21 +977,18 @@
       bottom: 1.5rem;
       left: 1.5rem;
       z-index: 120;
-
       padding: 0.55rem 1.2rem;
       border-radius: 12px;
       border: none;
       font-size: 0.9rem;
       font-weight: 600;
-
       background: #ffffff;
       color: #111827;
       box-shadow: 0 8px 20px rgba(0,0,0,0.18);
-
       cursor: pointer;
       transition: 0.15s ease;
-      opacity: 0;                /* hidden at first */
-      pointer-events: none;       /* cannot be clicked until shown */
+      opacity: 0;
+      pointer-events: none;
     }
 
     body.theme-midnight .return-btn {
@@ -853,7 +1016,7 @@
   <!-- ===== LANDING / TITLE PAGE (3D DRAGON BANNER) ===== -->
   <div id="landing">
     <div class="banner">
-      <!-- 3D spinner; items are injected by index.js -->
+      <!-- 3D spinner; items are injected by JS -->
       <div class="slider" id="spinner-slider"></div>
 
       <div class="content">
@@ -898,13 +1061,54 @@
 
           <h3>What I Do</h3>
           <ul>
-            <li>💻 Develop apps & games in Java and other languages</li>
+            <li>💻 Develop apps &amp; games in Java and other languages</li>
             <li>📊 Connect CS with other subjects like Economics</li>
             <li>🏐 Lead and collaborate as a student leader</li>
             <li>🎤 Organize events and activities that are school wide</li>
           </ul>
 
           <button id="contact-btn">📧 Contact Me</button>
+        </div>
+      </div>
+    </section>
+
+    <!-- PROJECTS -->
+    <section id="section-projects" class="section">
+      <div class="hero-card">
+        <div class="info">
+          <h2>Projects</h2>
+          <p>Some of the things I’ve actually built and worked on.</p>
+
+          <div class="project-list">
+            <div class="project-card">
+              <h3>Restaurant Manager / Econ Game</h3>
+              <p>
+                A 2D restaurant management game built as my IB Computer Science IA. It
+                uses IB Economics concepts like fixed vs. variable costs, revenue, and
+                market response to help players understand how real decisions affect profit.
+              </p>
+              <p><strong>Tech:</strong> Java, Swing, JSON, basic game loops</p>
+            </div>
+
+            <div class="project-card">
+              <h3>QSI Event Tools</h3>
+              <p>
+                Small digital tools and systems to support STUCO events like Lock-In,
+                Homecoming, and Spirit Weeks — focusing on simplifying sign-ups, tracking,
+                and communication.
+              </p>
+              <p><strong>Role:</strong> STUCO VP, organizer &amp; builder</p>
+            </div>
+
+            <div class="project-card">
+              <h3>Portfolio &amp; Visual Experiments</h3>
+              <p>
+                This site itself is a project — experimenting with 3D visuals, motion, and
+                theming while keeping everything light and readable.
+              </p>
+              <p><strong>Tech:</strong> HTML, CSS, JavaScript, webpack, Vercel</p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -929,6 +1133,31 @@
             <li>💻 Built a 2D restaurant–economics game as an IB Computer Science IA project</li>
             <li>📚 Member of honor societies and active in academic clubs</li>
           </ul>
+
+          <h3>Timeline</h3>
+          <div class="timeline">
+            <div class="timeline-item">
+              <h4>STUCO Vice President <span>• 2025 – present</span></h4>
+              <p>
+                Lead and support school-wide events, from Lock-In to Homecoming and
+                everyday student life initiatives.
+              </p>
+            </div>
+            <div class="timeline-item">
+              <h4>IB Computer Science IA Project <span>• 2025 – present</span></h4>
+              <p>
+                Designed and implemented a full 2D game that merges CS with Economics
+                in a playable learning tool.
+              </p>
+            </div>
+            <div class="timeline-item">
+              <h4>Honor Societies &amp; Clubs <span>• ongoing</span></h4>
+              <p>
+                Understand that school isn’t just about studies but also communication, leadership,
+                and friendship in general.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -949,9 +1178,9 @@
           <h3>Things I Enjoy</h3>
           <ul>
             <li>🏐 Playing volleyball with my school team</li>
-            <li>🎮 Designing and coding small games & interactive projects</li>
+            <li>🎮 Designing and coding small games &amp; interactive projects</li>
             <li>🎧 Listening to music while brainstorming new project ideas</li>
-            <li>🔫 Plays a lot of Valorant, and all types of shooter games</li>
+            <li>🔫 Playing Valorant and other FPS games for fun and “team comp” stress</li>
           </ul>
         </div>
       </div>
@@ -966,15 +1195,25 @@
       <p>📧 Email: 30664@shenzhen.qsi.org</p>
       <p>📱 Hero Hotline: +86 12312341234</p>
       <p>📍 Based in: Shenzhen China</p>
+      <button class="btn-secondary">Resume / CV available on request</button>
     </div>
   </div>
 
   <button id="return-btn" class="return-btn">⟵ Return</button>
 
+  <!-- Scroll hint just above footer -->
+  <div class="scroll-hint" id="scroll-hint">
+    <span>scroll</span>
+    <span class="chevron">⌄</span>
+  </div>
+
   <footer>
     <nav class="footer-nav">
       <button class="footer-link active" data-section="section-introduction">
         Introduction
+      </button>
+      <button class="footer-link" data-section="section-projects">
+        Projects
       </button>
       <button class="footer-link" data-section="section-achievements">
         Achievements
@@ -1009,7 +1248,7 @@
     </div>
   </div>
 
-  <!-- 🔗 JS entry -->
+  <!-- JS entry -->
   <script src="index.js"></script>
 </body>
 </html>
